--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,10 @@
         <link rel="stylesheet" href="./styles.css">
     </head>
     <body>
-        Tailwind CSS Actions
-        <a href="#">Hello</a>
-        <a href="#">World</a>
+        <div>
+            <p class="text-green-300 text-2xl font-extrabold">First Line</p>
+            <p class="text-yellow-600 text-3xl font-bold">Second Line</p>
+            <p class="text-red-400 text-2xl font-semibold">Third Line</p>
+        </div>
     </body>
 </html>
