--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>TailwindCSS Actions</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./styles.css">
-    </head>
-    <body>
-        <div>
-            <p class="text-green-300 text-2xl font-extrabold">First Line</p>
-            <p class="text-yellow-600 text-3xl font-bold">Second Line</p>
-            <p class="text-red-400 text-2xl font-semibold">Third Line</p>
-        </div>
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <title>TailwindCSS Actions</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
+    <div style="text-align: center">
+      <p class="rounded border-2 p-2 mx-14 border-red-400 text-green-300 text-2xl font-extrabold">First Line</p>
+      <p class="text-yellow-600 text-3xl font-bold">Second Line</p>
+      <span class="border-b-2 border-blue-400 pb-1 m-8 text-red-400 text-2xl font-semibold">Fourth Line</span>
+    </div>
+  </body>
 </html>
