config file added

--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <div style="text-align: center">
-      <p class="rounded border-2 p-2 mx-14 border-red-400 text-green-300 text-2xl font-extrabold">First Line</p>
-      <p class="text-yellow-600 text-3xl font-bold">Second Line</p>
-      <span class="border-b-2 border-blue-400 pb-1 m-8 text-red-400 text-2xl font-semibold">Fourth Line</span>
+      <p class="rounded border-2 p-2 mx-14 border-red-400 text-2xl font-extrabold">First Line</p>
+      <p class="bg-blue-200 text-green-300 font-bold">Second Line</p>
+      <span class="border-b-2 border-blue-400 pb-1 m-8 text-yellow-700 text-2xl font-semibold">Fourth Line</span>
     </div>
   </body>
 </html>
