--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
       <p class="rounded border-2 p-2 mx-14 border-red-400 text-2xl font-extrabold">First Line</p>
       <p class="bg-blue-200 text-green-300 font-bold">Second Line</p>
       <span class="border-b-2 border-blue-400 pb-1 m-8 text-yellow-700 text-2xl font-semibold">Fourth Line</span>
+      <p class="font-londrina text-7xl text-green-600">THIS FONT SHOULD BE DIFFERENT</p>
     </div>
   </body>
 </html>
