--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,20 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <div style="text-align: center">
+    <div>
       <p class="rounded border-2 p-2 mx-14 border-red-400 text-2xl font-extrabold">First Line</p>
       <p class="bg-blue-200 text-green-300 font-bold">Second Line</p>
       <span class="border-b-2 border-blue-400 pb-1 m-8 text-yellow-700 text-2xl font-semibold">Fourth Line</span>
       <p class="font-londrina text-7xl text-green-600">THIS FONT SHOULD BE DIFFERENT</p>
+    </div>
+
+    <hr/>
+    <!-- Practicing Tailwind CSS Flexbox -->
+    <div class="flex justify-center items-center">
+      <div class="rounded-lg font-londrina bg-red-400 h-30 w-30 p-4 m-2">First Card</div>
+      <div class="shadow-lg rounded-lg font-londrina bg-blue-400 h-34 w-20 p-4 m-2">Second Card</div>
+      <div class="rounded-lg font-londrina bg-green-400 h-21 w-30 p-4 m-2">Third Card</div>
+      <div class="rounded-lg font-londrina bg-purple-400 h-14 w-33 p-4 m-2">Fourth Card</div>
     </div>
   </body>
 </html>
