--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,18 @@
 
     <hr/>
     <!-- Practicing Tailwind CSS Flexbox -->
-    <div class="flex justify-center items-center">
+    <div class="flex md:items-center justify-center bg-yellow-200">
       <div class="rounded-lg font-londrina bg-red-400 h-30 w-30 p-4 m-2">First Card</div>
-      <div class="shadow-lg rounded-lg font-londrina bg-blue-400 h-34 w-20 p-4 m-2">Second Card</div>
+      <div class="shadow-lg rounded-lg font-londrina bg-blue-400 h-30 w-20 p-4 m-2">Second Card</div>
       <div class="rounded-lg font-londrina bg-green-400 h-21 w-30 p-4 m-2">Third Card</div>
       <div class="rounded-lg font-londrina bg-purple-400 h-14 w-33 p-4 m-2">Fourth Card</div>
+    </div>
+
+    <!-- Experimenting with position, relative(parent), absolute(child, top-12 bottom-12 right-12, no left) -->
+    <div class="bg-yellow-300 relative h-20 w-full mt-5">
+      <div class="h-10 w-20 bg-green-800 absolute top-3 right-4">
+        Something
+      </div>
     </div>
   </body>
 </html>
