apply directive added

--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,10 @@
     <hr/>
     <!-- Practicing Tailwind CSS Flexbox -->
     <div class="flex md:items-center justify-center bg-yellow-200">
-      <div class="rounded-lg font-londrina bg-red-400 h-30 w-30 p-4 m-2">First Card</div>
-      <div class="shadow-lg rounded-lg font-londrina bg-blue-400 h-30 w-20 p-4 m-2">Second Card</div>
-      <div class="rounded-lg font-londrina bg-green-400 h-21 w-30 p-4 m-2">Third Card</div>
-      <div class="rounded-lg font-londrina bg-purple-400 h-14 w-33 p-4 m-2">Fourth Card</div>
+      <div class="first">First Card</div>
+      <div class="second">Second Card</div>
+      <div class="third">Third Card</div>
+      <div class="fourth">Fourth Card</div>
     </div>
 
     <!-- Experimenting with position, relative(parent), absolute(child, top-12 bottom-12 right-12, no left) -->
