hover, grid, heroicons added

--- a/public/index.html
+++ b/public/index.html
@@ -29,5 +29,48 @@
         Something
       </div>
     </div>
+
+    <!-- Experimenting with Tailwind Grid, hover, Icons(HeroIcons) -->
+    <br/><br/>
+    <div class="m-2 p-2 grid grid-cols-3 gap-4 bg-pink-200 border-2 hover:border-gray-500 hover:bg-green-100 rounded">
+      <div class="h-10 w-full bg-red-400 col-span-2 p-2 font-londrina text-green-900">
+        We are examining Grid of Tailwind
+        <svg class="w-4 inline-block rounded-full bg-yellow-400 cursor-pointer" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
+        </svg>
+      </div>
+      <div class="h-10 w-full bg-red-600 p-2">
+        Calculator
+        <svg onclick="alert('Calculator Clicked')" class="w-8 inline-block cursor-pointer" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 7h6m0 10v-3m-3 3h.01M9 17h.01M9 14h.01M12 14h.01M15 11h.01M12 11h.01M9 11h.01M7 21h10a2 2 0 002-2V5a2 2 0 00-2-2H7a2 2 0 00-2 2v14a2 2 0 002 2z" />
+        </svg>
+      </div>
+      <div class="h-10 w-full bg-green-600 p-2">
+        C
+      </div>
+      <div class="h-10 w-full bg-blue-500 p-2">
+        D
+      </div>
+      <div class="h-10 w-full bg-purple-600 p-2">
+        E
+      </div>
+      <div class="h-24 w-full bg-purple-600 p-2 row-span-2">
+        F
+      </div>
+      <div class="h-10 w-full bg-red-600 p-2 col-span-2">
+        G
+      </div>
+      <div class="h-10 w-full bg-yellow-600 p-2">
+        H
+      </div>
+      <div class="h-10 w-full bg-pink-600 p-2">
+        I
+      </div>
+    </div>
+
+    <br/><br/>
+
+    <!-- Next Topic -->
+    
   </body>
 </html>
