hidden, transition, transform added

--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,17 @@
 
     <br/><br/>
 
-    <!-- Next Topic -->
+    <!-- hidden -->
+    <button id="hideButton">Hide or Not</button>
+    <div id="hiddenContent">
+      hello
+    </div>
+    <!-- transition, transform -->
+    <hr/><hr/>
+    <div class="special">
+      <p>This might work</p>
+    </div>
     
+  <script src="./index.js"></script>
   </body>
 </html>
